Fix z-index of renderer panel separator

--- a/src/app/styles/Dashboard.css
+++ b/src/app/styles/Dashboard.css
@@ -2,7 +2,6 @@
   background: #000;
   opacity: 0.7;
   width: 2px;
-  z-index: 1;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
